@@ -1,10 +1,13 @@
+	- Add new attributes to $dbh: pg_db, pg_user, pg_pass,
+		pg_host, pg_port, pg_options, pg_socket, pg_pid
+		[Greg Sabino Mullane]
   - Minor pointer increment fix in quote.c
     [Christophe Martin:  schplurtz at free.fr]
 	- Add support for SQLSTATE via $dbh->state()
 		[Greg Sabino Mullane]
 	- Major overhaul of prepare/execute to handle new server-side 
 		prepare system. [Greg Sabino Mullane]
-	- Add DBD_TRACE to some tests for better debugging.
+	- Add DBD_TRACE to all tests for better debugging.
 	- Make the tests honor the DBD_SCHEMA variable instead of 
 		assuming that "public" is available.
 		[Rainer Weikusat]
